@@ -10,6 +10,7 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.assertArg;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
@@ -40,6 +41,7 @@ import com.google.common.collect.Maps;
 import com.google.gson.Gson;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
@@ -413,7 +415,7 @@ public class WorkspacesControllerTest {
     when(cohortBuilderService.findAllDemographicsMap()).thenReturn(HashBasedTable.create());
 
     when(accessTierService.getAccessTierShortNamesForUser(currentUser))
-        .thenReturn(Arrays.asList(AccessTierService.REGISTERED_TIER_SHORT_NAME));
+        .thenReturn(List.of(AccessTierService.REGISTERED_TIER_SHORT_NAME));
     when(accessTierService.getRegisteredTierOrThrow()).thenReturn(registeredTier);
 
     cdrVersion = createDefaultCdrVersion(1);
@@ -588,7 +590,7 @@ public class WorkspacesControllerTest {
   }
 
   private List<RawlsWorkspaceACLUpdate> convertUserRolesToUpdateAclRequestList(
-      List<UserRole> collaborators) {
+      Collection<UserRole> collaborators) {
     return collaborators.stream()
         .map(c -> FirecloudTransforms.buildAclUpdate(c.getEmail(), c.getRole()))
         .collect(Collectors.toList());
@@ -732,21 +734,14 @@ public class WorkspacesControllerTest {
     Workspace workspace = createWorkspace();
     workspace.setCdrVersionId(archivedCdrVersionId);
     assertThrows(
-        FailedPreconditionException.class,
-        () -> {
-          workspacesController.createWorkspace(workspace);
-        });
+        FailedPreconditionException.class, () -> workspacesController.createWorkspace(workspace));
   }
 
   @Test
   public void testCreateWorkspace_noResearchPurposeThrows() {
     Workspace workspace = createWorkspace();
     workspace.setResearchPurpose(null);
-    assertThrows(
-        BadRequestException.class,
-        () -> {
-          workspacesController.createWorkspace(workspace);
-        });
+    assertThrows(BadRequestException.class, () -> workspacesController.createWorkspace(workspace));
   }
 
   // we do not actually use the accessTierShortName of the Workspace passed to
@@ -778,9 +773,7 @@ public class WorkspacesControllerTest {
     workspace.setCdrVersionId(archivedCdrVersionId);
     assertThrows(
         FailedPreconditionException.class,
-        () -> {
-          workspacesController.createWorkspaceAsync(workspace);
-        });
+        () -> workspacesController.createWorkspaceAsync(workspace));
   }
 
   @Test
@@ -788,10 +781,7 @@ public class WorkspacesControllerTest {
     Workspace workspace = createWorkspace();
     workspace.setResearchPurpose(null);
     assertThrows(
-        BadRequestException.class,
-        () -> {
-          workspacesController.createWorkspaceAsync(workspace);
-        });
+        BadRequestException.class, () -> workspacesController.createWorkspaceAsync(workspace));
   }
 
   @Test
@@ -824,9 +814,7 @@ public class WorkspacesControllerTest {
     workspace.setCdrVersionId(archivedCdrVersionId);
     assertThrows(
         FailedPreconditionException.class,
-        () -> {
-          workspacesController.duplicateWorkspaceAsync("foo", "bar", request);
-        });
+        () -> workspacesController.duplicateWorkspaceAsync("foo", "bar", request));
   }
 
   @Test
@@ -837,9 +825,7 @@ public class WorkspacesControllerTest {
     workspace.setResearchPurpose(null);
     assertThrows(
         BadRequestException.class,
-        () -> {
-          workspacesController.duplicateWorkspaceAsync("foo", "bar", request);
-        });
+        () -> workspacesController.duplicateWorkspaceAsync("foo", "bar", request));
   }
 
   @Test
@@ -2184,41 +2170,42 @@ public class WorkspacesControllerTest {
     accessTierDao.save(controlledTierCdr.getAccessTier());
     cdrVersionDao.save(controlledTierCdr);
 
-    Workspace workspace =
+    Workspace originalWorkspace =
         workspacesController
             .createWorkspace(
                 createWorkspace().cdrVersionId(String.valueOf(controlledTierCdr.getCdrVersionId())))
             .getBody();
-    List<UserRole> collaborators =
-        new ArrayList<>(
-            Arrays.asList(
-                new UserRole().email(cloner.getUsername()).role(WorkspaceAccessLevel.OWNER),
-                new UserRole().email(LOGGED_IN_USER_EMAIL).role(WorkspaceAccessLevel.OWNER),
-                new UserRole().email(reader.getUsername()).role(WorkspaceAccessLevel.READER),
-                new UserRole().email(writer.getUsername()).role(WorkspaceAccessLevel.WRITER)));
 
     stubFcUpdateWorkspaceACL();
-    RawlsWorkspaceACL workspaceAclFromCloned =
-        createWorkspaceACL(
-            new JSONObject()
-                .put(
-                    "cloner@gmail.com",
-                    new JSONObject()
-                        .put("accessLevel", "OWNER")
-                        .put("canCompute", true)
-                        .put("canShare", true)));
 
-    RawlsWorkspaceACL workspaceAclFromOriginal =
+    // setting the "include user roles" flag will update the list of workspace collaborators after
+    // cloning/duplication.
+
+    // The original Workspace has "cloner" as READER, LOGGED_IN_USER_EMAIL as OWNER, and an
+    // additional READER and WRITER.
+
+    // We show that these are retained in the new Workspace, with the exception of:
+    // a. the "cloner" user who called this method - they get upgraded to OWNER.
+    // b. the "published" group - it is removed
+
+    RawlsWorkspaceACL originalAcl =
         createWorkspaceACL(
             new JSONObject()
                 .put(
                     "cloner@gmail.com",
                     new JSONObject()
                         .put("accessLevel", "READER")
-                        .put("canCompute", true)
-                        .put("canShare", true))
+                        .put("canCompute", false)
+                        .put("canShare", false))
                 .put(
                     "reader@gmail.com",
+                    new JSONObject()
+                        .put("accessLevel", "READER")
+                        .put("canCompute", false)
+                        .put("canShare", false))
+                // this is how we indicate that a workspace has been published
+                .put(
+                    workspaceService.getPublishedWorkspacesGroupEmail(),
                     new JSONObject()
                         .put("accessLevel", "READER")
                         .put("canCompute", false)
@@ -2236,42 +2223,69 @@ public class WorkspacesControllerTest {
                         .put("canCompute", true)
                         .put("canShare", true)));
 
+    // cloning/duplication is not atomic. When the workspace is first created, it will only have
+    // creator=OWNER access, like a newly-created workspace.  We add other permissions later.
+
+    RawlsWorkspaceACL clonedAclBeforeUpdate =
+        createWorkspaceACL(
+            new JSONObject()
+                .put(
+                    "cloner@gmail.com",
+                    new JSONObject()
+                        .put("accessLevel", "OWNER")
+                        .put("canCompute", true)
+                        .put("canShare", true)));
+
+    when(fireCloudService.getWorkspaceAclAsService(
+            originalWorkspace.getNamespace(), originalWorkspace.getName()))
+        .thenReturn(originalAcl);
     when(fireCloudService.getWorkspaceAclAsService("cloned-ns", "cloned"))
-        .thenReturn(workspaceAclFromCloned);
-    when(fireCloudService.getWorkspaceAclAsService(workspace.getNamespace(), workspace.getName()))
-        .thenReturn(workspaceAclFromOriginal);
+        .thenReturn(clonedAclBeforeUpdate);
+
+    // cloner is now OWNER, and the "published" group has NO_ACCESS
+    List<RawlsWorkspaceACLUpdate> expectedCollaboratorsAfterUpdate =
+        convertUserRolesToUpdateAclRequestList(
+            Set.of(
+                new UserRole().email(cloner.getUsername()).role(WorkspaceAccessLevel.OWNER),
+                new UserRole().email(LOGGED_IN_USER_EMAIL).role(WorkspaceAccessLevel.OWNER),
+                new UserRole().email(reader.getUsername()).role(WorkspaceAccessLevel.READER),
+                new UserRole().email(writer.getUsername()).role(WorkspaceAccessLevel.WRITER),
+                new UserRole()
+                    .email(workspaceService.getPublishedWorkspacesGroupEmail())
+                    .role(WorkspaceAccessLevel.NO_ACCESS)));
 
     currentUser = cloner;
 
-    Workspace modWorkspace =
-        new Workspace()
-            .namespace("cloned-ns")
-            .name("cloned")
-            .researchPurpose(workspace.getResearchPurpose())
-            .billingAccountName("billing-account")
-            .cdrVersionId(String.valueOf(controlledTierCdr.getCdrVersionId()));
-
     stubCloneWorkspace("cloned-ns", "cloned", cloner.getUsername());
 
-    Workspace workspace2 =
+    CloneWorkspaceRequest cloneRequest =
+        new CloneWorkspaceRequest()
+            .includeUserRoles(true)
+            .workspace(
+                new Workspace()
+                    .namespace("cloned-ns")
+                    .name("cloned")
+                    .researchPurpose(originalWorkspace.getResearchPurpose())
+                    .billingAccountName("billing-account")
+                    .cdrVersionId(String.valueOf(controlledTierCdr.getCdrVersionId())));
+
+    Workspace clonedWorkspace =
         workspacesController
             .cloneWorkspace(
-                workspace.getNamespace(),
-                workspace.getId(),
-                new CloneWorkspaceRequest().includeUserRoles(true).workspace(modWorkspace))
+                originalWorkspace.getNamespace(), originalWorkspace.getId(), cloneRequest)
             .getBody()
             .getWorkspace();
 
-    assertThat(workspace2.getCreator()).isEqualTo(cloner.getUsername());
-    List<RawlsWorkspaceACLUpdate> updateACLRequestList =
-        convertUserRolesToUpdateAclRequestList(collaborators);
+    assertThat(clonedWorkspace.getCreator()).isEqualTo(cloner.getUsername());
 
     verify(fireCloudService)
         .updateWorkspaceACL(
             eq("cloned-ns"),
             eq("cloned"),
             // Accept the ACL update list in any order.
-            argThat(arg -> new HashSet<>(updateACLRequestList).equals(new HashSet<>(arg))));
+            assertArg(
+                arg ->
+                    assertThat(arg).containsExactlyElementsIn(expectedCollaboratorsAfterUpdate)));
   }
 
   @Test
@@ -2645,10 +2659,9 @@ public class WorkspacesControllerTest {
 
     assertThrows(
         BadRequestException.class,
-        () -> {
-          workspacesController.shareWorkspacePatch(
-              workspace.getNamespace(), workspace.getName(), shareWorkspaceRequest);
-        });
+        () ->
+            workspacesController.shareWorkspacePatch(
+                workspace.getNamespace(), workspace.getName(), shareWorkspaceRequest));
   }
 
   @Test
